terraform/network/modules/forti-gate/instance-active.tf
// FGTVM active instance

resource "aws_network_interface" "eth0" {
  description = "active-port1"
  subnet_id   = aws_subnet.publicsubnetaz1.id
  private_ips = [var.activeport1]
}

resource "aws_network_interface" "eth1" {
  description       = "active-port2"
  subnet_id         = aws_subnet.privatesubnetaz1.id
  private_ips       = [var.activeport2]
  source_dest_check = false
}

resource "aws_network_interface" "eth2" {
  description       = "active-port3"
  subnet_id         = aws_subnet.hasyncsubnetaz1.id
  private_ips       = [var.activeport3]
  source_dest_check = false
}

resource "aws_network_interface" "eth3" {
  description = "active-port4"
  subnet_id   = aws_subnet.hamgmtsubnetaz1.id
  private_ips = [var.activeport4]
}

resource "aws_network_interface_sg_attachment" "publicattachment" {
  depends_on           = [aws_network_interface.eth0]
  security_group_id    = aws_security_group.public_allow.id
  network_interface_id = aws_network_interface.eth0.id
}

resource "aws_network_interface_sg_attachment" "mgmtattachment" {
  depends_on           = [aws_network_interface.eth3]
  security_group_id    = aws_security_group.public_allow.id
  network_interface_id = aws_network_interface.eth3.id
}

resource "aws_network_interface_sg_attachment" "internalattachment" {
  depends_on           = [aws_network_interface.eth1]
  security_group_id    = aws_security_group.allow_all.id
  network_interface_id = aws_network_interface.eth1.id
}

resource "aws_network_interface_sg_attachment" "hasyncattachment" {
  depends_on           = [aws_network_interface.eth2]
  security_group_id    = aws_security_group.allow_all.id
  network_interface_id = aws_network_interface.eth2.id
}

resource "aws_instance" "fgtactive" {
  //it will use region, architect, and license type to decide which ami to use for deployment
  ami               = local.fgtami[var.region][var.arch][var.license_type]
  instance_type     = var.size
  availability_zone = "${var.region}${var.az1}"
  key_name          = "${var.name_prefix}${var.keypair_name}ACT"
  user_data = chomp(templatefile("${path.module}/${var.bootstrap-active}", {
    type            = "${var.license_type}"
    license_file    = "${var.license}"
    format          = "${var.license_format}"
    port1_ip        = "${var.activeport1}"
    port1_mask      = "${var.activeport1mask}"
    port2_ip        = "${var.activeport2}"
    port2_mask      = "${var.activeport2mask}"
    port3_ip        = "${var.activeport3}"
    port3_mask      = "${var.activeport3mask}"
    port4_ip        = "${var.activeport4}"
    port4_mask      = "${var.activeport4mask}"
    passive_peerip  = "${var.passiveport3}"
    mgmt_gateway_ip = "${var.activeport4gateway}"
    defaultgwy      = "${var.activeport1gateway}"
    privategwy      = "${var.activeport2gateway}"
    vpc_ip          = cidrhost(var.vpccidr, 0)
    vpc_mask        = cidrnetmask(var.vpccidr)
    adminsport      = "${var.adminsport}"

  }))
  
  iam_instance_profile = aws_iam_instance_profile.ssm_profile.name

  root_block_device {
    volume_type = "standard"
    volume_size = "10"
  }

  ebs_block_device {
    device_name = "/dev/sdb"
    volume_size = "50"
    volume_type = "gp3"
  }

  network_interface {
    network_interface_id = aws_network_interface.eth0.id
    device_index         = 0
  }

  network_interface {
    network_interface_id = aws_network_interface.eth1.id
    device_index         = 1
  }

  network_interface {
    network_interface_id = aws_network_interface.eth2.id
    device_index         = 2
  }

  network_interface {
    network_interface_id = aws_network_interface.eth3.id
    device_index         = 3
  }

  tags = merge(
    var.tags,
    {
      Name = "${var.name_prefix}FTGACT"
    }
  )
}

resource "aws_key_pair" "keypair_fgtactive" {
  key_name   = "${var.name_prefix}${var.keypair_name}ACT"
  public_key = tls_private_key.keypair_fgtactive.public_key_openssh  // Aquí eliminamos [each.key]
  tags = merge(
    {
      Name = "${var.name_prefix}${var.keypair_name}ACT"
    },
    var.tags
  )
}


resource "tls_private_key" "keypair_fgtactive" {
  algorithm = "RSA"
  rsa_bits  = 4096
}

resource "aws_ssm_parameter" "parameter_fgtactive" {
  name  = "/${var.environment}/EC2/${var.name_prefix}${var.keypair_name}ACT"
  type  = "SecureString"
  value = tls_private_key.keypair_fgtactive.private_key_pem  // Aquí eliminamos [each.key]
  tags = merge(
    {
      Name = "${var.name_prefix}${var.keypair_name}ACT"
    },
    var.tags
  )
}
